[project]
name = "geometry-processing-deformation-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruimin Chen"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polyscope (>=2.3.0,<3.0.0)",
    "libigl (>=2.5.1,<3.0.0)",
    "gpytoolbox (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
